[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Flash_Light.glb" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Flash_Light.gd" type="Script" id=2]

[sub_resource type="CapsuleShape" id=1]
height = 15.0

[node name="Flash_Light" instance=ExtResource( 1 )]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
script = ExtResource( 2 )

[node name="SpotLight" type="SpotLight" parent="." index="3"]
transform = Transform( 4, 0, 0, 0, -4, 1.48028e-06, 0, 1.48028e-06, 4, 0, 0, -1.2 )
light_color = Color( 1, 0.94902, 0.705882, 1 )
light_energy = 10.0
spot_range = 40.0
spot_attenuation = 5.0
spot_angle = 25.0

[node name="Area" type="Area" parent="." index="4"]
transform = Transform( 4, 0, 0, 0, -4, 1.48028e-06, 0, 1.48028e-06, 4, 0, 0.137147, -1.2252 )

[node name="CollisionShape" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -8.5 )
shape = SubResource( 1 )

[node name="Light_Timer" type="Timer" parent="." index="5"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Damage_Timer" type="Timer" parent="." index="6"]
wait_time = 0.2
one_shot = true

[node name="Light_Recharge" type="Timer" parent="." index="7"]
wait_time = 0.01
one_shot = true

[node name="Light_Disable" type="Timer" parent="." index="8"]
wait_time = 5.0
one_shot = true
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="Light_Timer" to="." method="_on_Light_Timer_timeout"]
[connection signal="timeout" from="Damage_Timer" to="." method="_on_Damage_Timer_timeout"]
[connection signal="timeout" from="Light_Recharge" to="." method="_on_Light_recharge_timeout"]
[connection signal="timeout" from="Light_Disable" to="." method="_on_Light_Disable_timeout"]
